tests/operator/substract_nonnum_num.rz
"1" - 1 // error: operation '-' is not allowed between types 'str' and 'int'
1 - "1" // error: operation '-' is not allowed between types 'int' and 'str'